        before (all default to FALSE).
      * warning issued if an index variable is to be constructed that subsequently 
        overwrites an already present column of the same name ('id' and/or 'time').
      * pacified warning in subsetting with with non-existent rows and columns due
        to deprecation of 'structure(NULL, *)' in R >= 3.4.0.
  * ranef: new function to calculate random effects from RE model objects, like
           fixef for FE models.
  * cortab: new function to compute cross-sectional correlation matrix.
  * pwartest, pwfdtest: * statistics are labelled as F statistics.
                        * calculations now done without car::linearHypothesis().
  * diff.pseries: * logicals can now be diff'ed (result is integer, mimics base::diff).
                  * does not warn anymore if argument 'lag' has length > 1.
  * difft.pseries (note the "t") implemented (non-exported), diff-ing with
    taking the value of the time dimension into account, analogous to already
    implemented (non-exported) functions lagt.pseries/leadt.pseries.
  * punbalancedness: extended to calculate unbalancedness measures of nested panel 
                     structures as in Baltagi/Song/Jung (2001).
  * mtest, sargan: return values gained data.name element.
  * pbltest: now accepts pdata.frames with index not in first two columns.
  * pwartest.formula (only formula interface): fixed: ellipsis ("dots") was not passed on.
  * summary.pseries: better handling of characters, logicals, factors (use base methods).
  * summary.piest, summary.pht: table headings now have "z-value" and "Pr(>|z|)" 
                                as the numbers are based on standard normal distribution.
  * make.pbalanced: argument 'balanced.type':
      * 'shared' renamed to 'shared.times' (with a back-compatible solution),
      * 'shared.individuals' added as additional option (symmetric case).
  * print.pseries: prettier printing for integers.